# sputnik

./: ChangeLog  Makefile.am  NEWS  README  TODO  acinclude.m4  authors.xml  autogen.sh  configure.ac
data/: Makefile.am
data/gconf/: Makefile.am  sputnik.schemas
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/mime/: Makefile.am  sputnik.desktop.in
data/ui/: Makefile.am  actions.xml  menubar.xml
src/: Makefile.am  sputnik.in
src/lib/: Makefile.am  __init__.py  config.py.in  dialog.py  io.py  media.py  ui.py  util.py
